sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:19: error: not found: value ok
  } while(ecart>1 || ok==false)
                     ^