sort.basic.comb.AlgCombSort.scala.code
def combSort() {
  var ecart=getNombreValeurs()
  
  do{
		var ok :Boolean = true
    if (ecart>1){
      ecart=(ecart.toDouble / 1.3).toInt
    }
    var i=0
    
    while(i+ecart < getNombreValeurs()){
      if(getValeur(i)>getValeur(i+ecart)){
        echange(i,i+ecart)
        i=i+1
        ok = false
      }
    }
  } while(ecart>1 || ok==false)
}